Fixed the landing page

--- a/Website/css/Fridge_v2.css
+++ b/Website/css/Fridge_v2.css
@@ -23,7 +23,7 @@ body {
   font-family: monospace;
   margin: 0;
   padding: 0;
-  background-image: url(naranjas.png);
+  background-image: url(../images/naranjas.png);
   background-size: cover;
   background-position: center;
   background-repeat:repeat; 
