--- a/Website/css/Fridge_v2.css
+++ b/Website/css/Fridge_v2.css
@@ -1,10 +1,11 @@
 
 h1 {
     text-align: center;
-    font-size: 70px;
+    font-size: 100%;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
 }
+
 
 #heading2 {
     background-color: aliceblue;
@@ -23,8 +24,7 @@ body {
   font-family: monospace;
   margin: 0;
   padding: 0;
-  background-image: url(../images/naranjas.png);
-  background-size: cover;
+  background-image: url(../images/pattern.png);
   background-position: center;
   background-repeat:repeat; 
   height: 100%;
@@ -32,7 +32,8 @@ body {
 
 #login {
     float: right;
-    margin-right: 5px;
+    margin-left: 100px;
+    width: 100%;
 }
 #title {
     padding-top: 50px;
@@ -65,11 +66,11 @@ body {
 }
 
 .left.carousel-control {
-    border-radius: 25px;
+    border-radius: 25%;
     opacity: 0.1;
 }
 .right.carousel-control {
-    border-radius: 25px;
+    border-radius: 25%;
     opacity: 0.1;
 }
 
