--- a/Website/css/style-login.css
+++ b/Website/css/style-login.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../images/image.jpg);
-    background-size: cover;
+    background: url(../images/pattern.png);
+
     background-position: center;
     font-family: sans-serif;
 }
