Added logout functionality to fridgep3.html

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -8,6 +8,11 @@
       3rd level: 1000px
       4th level: 1415px*/
 }
+#logout {
+    position: absolute;
+    top: 3px;
+    left: 825px;
+}
 #toast {
     position: absolute;
     top: 525px;
