--- a/Website/css/Fridge_v2.css
+++ b/Website/css/Fridge_v2.css
@@ -6,17 +6,19 @@ h1 {
     font-weight: bold;
 }
 
+.centerHeader {
+  text-align: center;
+  margin-bottom: 25px;
+}
 
 #heading2 {
-    background-color: aliceblue;
-    opacity: 0.8; 
-}
-
-#heading2 h2 {
     text-align: center;  
     font-family: 'Merriweather Sans', sans-serif;
-    font-size: 150%;
+    font-size: 1em;;
+    background-color: aliceblue;
+    opacity: 0.8;
 }
+
 body {
   background-color: #ffffff;
   color: white;
