added fridge-scanner html and css pages

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -151,3 +151,10 @@
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
 }
+
+/*
+body {
+  background-image: url("../images/empty_fridge_editted.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}*/
