--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -1,156 +1,158 @@
-@-webkit-keyframes shake {
-    from,
-    to {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-    }
-  
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-      -webkit-transform: translate3d(-10px, 0, 0);
-      transform: translate3d(-10px, 0, 0);
-    }
-  
-    20%,
-    40%,
-    60%,
-    80% {
-      -webkit-transform: translate3d(10px, 0, 0);
-      transform: translate3d(10px, 0, 0);
-    }
+/******************************************************************
+MEDIA QUERIES
+******************************************************************/
+/* for 414px or less */
+@media screen and (max-width: 415px) {
+  html {
+    background: url("../images/fridge_mobile.png") no-repeat;/*no-repeat center center fixed;*/
+    background-size: cover;
   }
-  @keyframes shake {
-    from,
-    to {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-    }
-  
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-      -webkit-transform: translate3d(-10px, 0, 0);
-      transform: translate3d(-10px, 0, 0);
-    }
-  
-    20%,
-    40%,
-    60%,
-    80% {
-      -webkit-transform: translate3d(10px, 0, 0);
-      transform: translate3d(10px, 0, 0);
-    }
+
+  .img-resize {
+    max-width: 40%;
+    height: auto;
   }
-.shake {
-    -webkit-animation-name: shake;
-    animation-name: shake;
-  }
-#fridge_container {
-    width: 980px;
-    height: 1729px;
+  #fridge_container {
+    width: 400px;
+    height: 711px;
     position: relative;
 
     /*1st level: 85px
       2nd level: 520px
       3rd level: 1000px
       4th level: 1415px*/
+  }
+  #logout {
+      position: absolute;
+      top: 3px;
+      left: 320px;
+      max-width: 15%;
+  }
+  #toast {
+      position: absolute;
+      top: 210px;
+      left: 130px;
+  }
+  #steak {
+      position: absolute;
+      top: 410px;
+      left: 50px;
+  }
+  #milk {
+      position: absolute;
+      top: 380px;
+      left: 250px;
+  }
+
+  #apple {
+      position: absolute;
+      top: 590px;
+      left: 50px;
+  }
+  #cabbage {
+      position: absolute;
+      top: 560px;
+      left: 250px;
+  }
+  .modal-header-meats {
+      color:#fff;
+      padding:9px 15px;
+      border-bottom:1px solid #eee;
+      background-color: #da4d2a;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+  }
+  .modal-header-fruits {
+  	color:#fff;
+      padding:9px 15px;
+      border-bottom:1px solid #eee;
+      background-color: #4ef064;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+  }
+  .modal-header-vegetables {
+  	color:#fff;
+      padding:9px 15px;
+      border-bottom:1px solid #eee;
+      background-color: #1d7a14;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+  }
+  .modal-header-dairy {
+      color:rgb(7, 7, 7);
+      padding:9px 15px;
+      border-bottom:1px solid #eee;
+      background-color: #f0f8ff;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+  }
+  .modal-header-wheat-and-grain {
+  	color:rgb(255, 255, 255);
+      padding:9px 15px;
+      border-bottom:1px solid #eee;
+      background-color: #616036;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+  }
+
 }
-#logout {
-    position: absolute;
-    top: 3px;
-    left: 825px;
-}
-#toast {
-    position: absolute;
-    top: 525px;
-    left: 350px;
-}
-#steak {
-    position: absolute;
-    top: 1000px;
-    left: 150px;
-}
-#milk {
-    position: absolute;
-    top: 1000px;
-    left: 520px;
+/******************************************************************
+MEDIA QUERIES
+******************************************************************/
+/* for 414px or less */
+@media screen and (min-width: 416px) {
+  #logout {
+      position: absolute;
+      top: 3px;
+      left: 825px;
+  }
+  #toast {
+      position: absolute;
+      top: 525px;
+      left: 350px;
+  }
+  #steak {
+      position: absolute;
+      top: 1000px;
+      left: 150px;
+  }
+  #milk {
+      position: absolute;
+      top: 1000px;
+      left: 520px;
+  }
+  #apple {
+      position: absolute;
+      top: 1415px;
+      left: 150px;
+  }
+  #cabbage {
+      position: absolute;
+      top: 1420px;
+      left: 520px;
+  }
 }
 
-#apple {
-    position: absolute;
-    top: 1415px;
-    left: 150px;
-}
-#cabbage {
-    position: absolute;
-    top: 1420px;
-    left: 520px;
-}
-.modal-header-meats {
-    color:#fff;
-    padding:9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: #da4d2a;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-}
-.modal-header-fruits {
-	color:#fff;
-    padding:9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: #4ef064;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-}
-.modal-header-vegetables {
-	color:#fff;
-    padding:9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: #1d7a14;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-}
-.modal-header-dairy {
-    color:rgb(7, 7, 7);
-    padding:9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: #f0f8ff;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-}
-.modal-header-wheat-and-grain {
-	color:rgb(255, 255, 255);
-    padding:9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: #616036;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-}
 
 /*
 body {
