--- a/Website/css/fridge-scanner.css
+++ b/Website/css/fridge-scanner.css
@@ -1,18 +1,47 @@
-@import url(https://fonts.googleapis.com/css?family=Arimo);
-label[for="file-input"] {
-  display: block;
-  margin-bottom: 1em;
-  font-size: 1em;
-  color: #fff;
-  opacity: .9;
-  font-weight: bold;
+body {
+  font-family: "Lato", sans-serif;
+  background-image: url("../images/bg-banana.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  border: 15px solid rgba(255, 255, 255, 0.8);
 }
+
+.logo {
+  max-height: auto;
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#hidden {
+  display: hidden;
+  visibility: hidden;
+  margin: 0;
+}
+
+.gif {
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 5px solid white;
+  padding: 5px;
+  max-height: 500px;
+  max-width: 500px;
+}
+
+/******** CHOOSE FILE BUTTON ********/
 
 input[type="file"] {
   cursor: pointer !Important;
 }
+
 input[type="file"]::-webkit-file-upload-button {
-  background: #E62163;
+  background: #b3b3b3;
   border: 0;
   padding: 1em 2em;
   cursor: pointer;
@@ -27,74 +56,94 @@ input[type="file"]::-ms-browse {
   color: #fff;
   border-radius: .2em;
 }
+/******** CHOOSE FILE BUTTON ********/
 
-body {
-  margin: 2em;
-  background-image: url("../images/bg-banana.jpeg");
-  background-repeat: ;
-  background-size: cover;
-  font-family: 'Arimo', sans-serif;
-  color: #fff;
-}
-
-.header span {
-  border-style: solid;
-  border-color: white;
-  padding: 15px;
-  border-width: 8px;
-}
-
-.header {
-  text-align: center;
-}
-.mainContent {
-  margin-left: 80px;
-}
-hr {
-  opacity: .3;
-  margin: 2em 0;
+/******** SIDE NAV MENU ********/
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
-.spanSteps {
-  color: white;
-  background-color: rgb(255, 255, 255, 0.3)
-}
-
-/************** SIDE NAV CSS **************/
-#mySidenav a {
-  position: absolute;
-  left: -90px;
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  display: block;
   transition: 0.3s;
-  padding: 10px;
-  width: 120px;
-  text-decoration: none;    
-  font-size: 2em;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
   color: white;
-  border-radius: 0 5px 5px 0;
 }
 
-#mySidenav a:hover {
-    left: 0;
+#main span {
+  font-size: 1.5em;
+  cursor: pointer;
+  color: white;
 }
 
-#yourFridge {
-    top: 20px;
-    background-color: #E62163;
+.whiteBg {
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5px;
 }
 
-#blog {
-    top: 120px;
-    background-color: #E62163;
+/******** SIDE NAV MENU ********/
+
+/******** COLLAPSIBLE ********/
+.collapsible {
+    background-color: rgba(166, 166, 166, 0.8);
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
 }
 
-#projects {
-    top: 140px;
-    background-color: #E62163;
+.active, .collapsible:hover {
+    background-color: rgba(166, 166, 166, 0.8);
 }
 
-#contact {
-    top: 200px;
-    background-color: #E62163;
+.content {
+    padding: 0 18px;
+    margin-bottom: 5px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+    color: black;
 }
+/******** COLLAPSIBLE ********/
 
-/************** SIDE NAV CSS **************/
+@media screen and (max-width: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 25px;}
+  .collapsible {
+    padding: 10px;
+  }
+}
