Hover Animations on pg.3 for Icons and Exit both Media Queries

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -1,3 +1,8 @@
+@keyframes swing {
+    0% { transform: rotate(3deg); }
+    100% { transform: rotate(-3deg); }
+}
+
 /******************************************************************
 MEDIA QUERIES
 ******************************************************************/
@@ -11,6 +16,11 @@ MEDIA QUERIES
     transform: scale(0.5);
     height: auto;
   }
+
+  .hover:hover {
+    transform: scale(0.65);
+    filter: drop-shadow(16px 16px 16px #ffffff);
+}
   .fridge_container {
     position: relative;
     /*1st level: 85px
@@ -108,21 +118,32 @@ MEDIA QUERIES
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
   }
+
+
 }
+
 /******************************************************************
 MEDIA QUERIES
 ******************************************************************/
 /* for 414px or less */
 @media screen and (min-width: 415px) {
   html {
-    background: url("../images/redroom.jpg") no-repeat center center fixed;
+    background: url("../images/emptyroom.jpg") no-repeat center center fixed;
     background-size: cover;
   }
-  
   img {
     transform: scale(0.6);
     height: auto;
   }
+  #logout:hover {
+    animation: swing ease-in-out 0.5s infinite alternate;
+    transform-origin: top -20px;
+    top: -25px;
+  }
+  .hover:hover {
+    transform: scale(0.65);
+    filter: drop-shadow(16px 16px 16px #ffffff);
+}
   .fridge_container { /*percentage of screen and then image will cover 100% of height */
     background-image:url("../images/fridge_ipad.png");
     position: absolute;
@@ -138,8 +159,8 @@ MEDIA QUERIES
   }
   #logout {
       position: absolute;
-      top: -25px;
-      left: 480px;
+      top: -40px;
+      left: 460px;
   }
   #toast {
       position: absolute;
