--- a/Website/css/fridge-scanner.css
+++ b/Website/css/fridge-scanner.css
@@ -1,11 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
+
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+
 body {
   font-family: "Lato", sans-serif;
-  background-image: url("../images/bg-banana.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  border: 15px solid rgba(255, 255, 255, 0.8);
+  background-image: url("../images/pattern.png");
+}
+
+h1 {
+  font-family: 'Fredoka One', cursive;
+  color: #b3b3b3;
+  text-align: center;
+  font-size: 11vw;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
+}
+
+h2 {
+  text-align: center;
+  font-size: 9vw;
+  font-family: 'Fredoka One', cursive !important;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
 }
 
 .logo {
@@ -17,10 +33,9 @@ body {
   width: 50%;
 }
 
-#hidden {
-  display: hidden;
-  visibility: hidden;
-  margin: 0;
+p {
+  font-size: 4vw;
+  font-family: 'Comfortaa', cursive;
 }
 
 .gif {
@@ -76,9 +91,12 @@ input[type="file"]::-ms-browse {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: black;
+  color: white;;
   display: block;
   transition: 0.3s;
+  font-family: 'Fredoka One', cursive;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
 .sidenav a:hover {
@@ -97,12 +115,16 @@ input[type="file"]::-ms-browse {
   transition: margin-left .5s;
   padding: 16px;
   color: white;
+  border: 15px solid rgba(255, 255, 255, 0.8);
 }
 
 #main span {
   font-size: 1.5em;
   cursor: pointer;
   color: white;
+  font-family: 'Fredoka One', cursive;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
 .whiteBg {
@@ -123,6 +145,7 @@ input[type="file"]::-ms-browse {
     text-align: left;
     outline: none;
     font-size: 15px;
+  font-family: 'Comfortaa', cursive;
 }
 
 .active, .collapsible:hover {
@@ -145,5 +168,7 @@ input[type="file"]::-ms-browse {
   .sidenav a {font-size: 25px;}
   .collapsible {
     padding: 10px;
+  }
+  
   }
 }
