--- a/Website/css/style-login.css
+++ b/Website/css/style-login.css
@@ -1,10 +1,21 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../images/pattern.png);
+    background: url(../images/backgroundLemon.jpeg);
     background-position: center;
     font-family: sans-serif;
 }
+
+#confirmPassword{
+  display: none;
+  visibility: hidden;
+}
+
+#lock{
+  display: none;
+  visibility: hidden;
+}
+
 
 h1 {
     text-align: center;
