Added flaticon references to fridgepg3.html

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -188,11 +188,6 @@ MEDIA QUERIES
       left: 270px;
   }
 }
-
-
-/*
-body {
-  background-image: url("../images/empty_fridge_editted.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
+.references {
+    display: none;
+}
