getSubCollection() generates modal content

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -3,6 +3,10 @@
     100% { transform: rotate(-3deg); }
 }
 
+.food-list {
+    overflow: scroll;
+}
+
 /******************************************************************
 MEDIA QUERIES
 ******************************************************************/
