--- a/Website/css/style-login.css
+++ b/Website/css/style-login.css
@@ -24,6 +24,15 @@ h1 {
     font-weight: bold;
 }
 
+#heading h1 {
+    font-family: 'Fredoka One', cursive;
+    color: #b3b3b3;
+    text-align: center;
+    font-size: 11vw;
+    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-color: black;
+}
+
 #title {
     padding-top: 50px;
     color: azure;
@@ -35,14 +44,13 @@ h1 {
 }
 
 .container {
-    width: 320px;
+    width: 350px;
     margin: auto;
-    padding: 10px;
 }
 
 .signup,
 .login {
-    width: 160px;
+    width: 175px;
     background: rgba(255, 255, 255, 0.767);
     height: 60px;
     float: left;
@@ -80,7 +88,7 @@ h1 {
 }
 
 
-#btn {
+.aButton {
     width: 100%;
     background: #34b4a0;
     height: 60px;
