--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -3,6 +3,10 @@
     100% { transform: rotate(-3deg); }
 }
 
+.food-list {
+    overflow: scroll;
+}
+
 /******************************************************************
 MEDIA QUERIES
 ******************************************************************/
@@ -188,11 +192,6 @@ MEDIA QUERIES
       left: 270px;
   }
 }
-
-
-/*
-body {
-  background-image: url("../images/empty_fridge_editted.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
+.references {
+    display: none;
+}
