--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -3,7 +3,7 @@
     100% { transform: rotate(-3deg); }
 }
 
-.references {
+.hidden {
     display: none;
 }
 
@@ -34,6 +34,33 @@
     color: rgb(96, 96, 194);
     font-size: 13pt;
     line-height: 0;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: opacity 0.15s ease-in-out;
+    -moz-transition: opacity 0.15s ease-in-out;
+    -ms-transition: opacity 0.15s ease-in-out;
+    -o-transition: opacity 0.15s ease-in-out;
+}
+
+.edit-button.disabled {
+    opacity: 0;
+}
+
+.cancel-button.disabled {
+    opacity: 0;
+}
+
+.cancel-button {
+    left: right;
+    color: rgb(96, 96, 194);
+    font-size: 13pt;
+    line-height: 0;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: opacity 0.15s ease-in-out;
+    -moz-transition: opacity 0.15s ease-in-out;
+    -ms-transition: opacity 0.15s ease-in-out;
+    -o-transition: opacity 0.15s ease-in-out;
 }
 
 .delete-button {
@@ -42,6 +69,7 @@
     font-size: 13pt;
     line-height: 0;
     display: none;
+    cursor:pointer;
 }
 .add-slider {
     max-height: 0px;
@@ -58,9 +86,9 @@
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   }
 
-/******************************************************************
+/**************************************************************************************************************************************************************
 MEDIA QUERIES
-******************************************************************/
+***************************************************************************************************************************************************************/
 /* for 414px or less */
 @media screen and (max-width: 414px) {
   html {
@@ -240,9 +268,9 @@ MEDIA QUERIES
   }
 }
 
-/******************************************************************
+/******************************************************************************************************************************************************
 MEDIA QUERIES
-******************************************************************/
+*******************************************************************************************************************************************************/
 /* for 415px or more */
 @media screen and (min-width: 415px) {
   html {
