--- a/Website/css/fridge_scanner.css
+++ b/Website/css/fridge_scanner.css
@@ -22,7 +22,7 @@
 
 
 body {
-  background-color: #ebebe0;
+  background-color: #ffffe6;
   font-family: 'Kite One', sans-serif;
 }
 
@@ -50,27 +50,22 @@ h2 > span {
   box-shadow: 5px 5px 5px #d9d9d9;
 }
 
-.hero-text span {
-  border: 2px solid white;
-  padding: 20px;
-  text-shadow: 2px 2px black;
-  font-family: 'Fredoka One', cursive;
-  font-size: 2em;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-}
-
 input {
   font-size: 1em;
 }
 
-#main {
+/* #main {
   transition: margin-left .5s;
   padding: 16px;
   color: black;
+  font-size: 30px;
+} */
+
+.main {
+  font-size: 20px;
 }
 
-#main > span {
+#menu {
   font-size: 1.5em;
   cursor: pointer;
   color: black;
@@ -84,14 +79,14 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 60%;
 }
 
 /******** HERO IMAGE ********/
 .hero-image {
     background-image: url("../images/pattern.png") !important;
     /* Set a specific height */
-    height: 35%;
+    height: 50%;
 
     /* Position and center the image to scale nicely on all screens */
     /* background-position: center; */
@@ -111,13 +106,23 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-size: 1.5vw;
 }
+
+.hero-text span {
+  border: 2px solid white;
+  padding: 20px;
+  text-shadow: 2px 2px black;
+  font-family: 'Fredoka One', cursive;
+  font-size: 2em;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
 /******** HERO IMAGE ********/
 
 /******** SIDE NAV MENU ********/
 .sidenav {
-  height: 100%;
+  height: 40%;
   width: 0;
   position: fixed;
   z-index: 1;
@@ -132,7 +137,7 @@ img {
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 1.5em;
   color: black;;
   display: block;
   transition: 0.3s;
@@ -154,3 +159,9 @@ img {
 }
 
 /******** SIDE NAV MENU ********/
+
+@media only screen and (max-width: 600px) {
+  .hero-text span {
+    font-size: 30px;
+  }
+}
